--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <a href="https://hamedjodeir.github.io/Sharp-Market/index.html">Hamed</a>
           <a href="#">Behnam</a>
           <a href="#">Sina</a>
+          <a href="#">Test</a>
         </div>
 
         <!-- ===============  Resources =========== -->
@@ -87,6 +88,7 @@
           <a href="https://github.com/Hamedjodeir/Sharp-Market">Hamed</a>
           <a href="#">Behnam</a>
           <a href="#">Sina</a>
+          <a href="#">Test</a>
         </div>
 
       </div>
