--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li> <a href="https://www.shatel.ir">https://www.shatel.ir</a> </li>
           <li> <a href="https://chess24.com">https://chess24.com</a> </li>
           <li> <a href="https://www.rocketsource.co">https://www.rocketsource.co</a> </li>
-          <li> <a href="https://www.w3schools.com/colors/colors_rgb.asp"></a> </li>
+          <li> <a href="https://www.w3schools.com/colors/colors_rgb.asp">https://www.w3schools.com/colors/colors_rgb.asp</a> </li>
 
         </ul>
       </div>
