--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <a href="https://hamedjodeir.github.io/Sharp-Market/index.html">Hamed</a>
           <a href="#">Behnam</a>
           <a href="#">Sina</a>
-          <a href="#">Test</a>
+          <a href="https://webppcorp.github.io/Test/">Test</a>
         </div>
 
         <!-- ===============  Resources =========== -->
@@ -89,7 +89,7 @@
           <a href="https://github.com/Hamedjodeir/Sharp-Market">Hamed</a>
           <a href="#">Behnam</a>
           <a href="#">Sina</a>
-          <a href="#">Test</a>
+          <a href="https://github.com/webppcorp/Test">Test</a>
         </div>
 
       </div>
